--- a/test2/src/css/common.css
+++ b/test2/src/css/common.css
@@ -185,3 +185,26 @@ a:hover {
 	background: #fe9616;
 	border: 3px solid white;
 }
+/* 
+.Div.div01 
+{
+	background : #f6f8ff;
+	border-radius : 4px;
+}
+.Div.div02 {
+	background: #e0eff9
+}
+.Div.gray-border {
+	-nexa-border: 1px solid e0eff9;
+}
+.Static.red {
+	background: #f41f34;
+}
+.Static.blue
+{
+	color : #4e3aea ;
+}
+.Static.green
+{
+	color : #07a054 ;
+} */
